<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_search"
          android:title="Search"
          android:icon="@drawable/ic_search"
          app:showAsAction="ifRoom|collapseActionView"
          app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_filter"
        android:title="Filter"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always" />
</menu>